Added logout feature along with and update to the chatbot logic. ALos updated swagger documentation
